# kineForge

./: .gitignore  AGENTS.md  LICENSE  PROJECT_DOCTRINE.md  README.md  RESULTS.md  ROADMAP.md  V1_READINESS.md  compare_eval.py  eval.py  eval_matrix.py  pyproject.toml  replay_gallery.py  run_index.py  sweep.py  train.py
configs/eval_matrices/: default.yaml
configs/failures/: basic_failures.yaml
configs/gates/: smoke.yaml  standard.yaml  strict.yaml
configs/rewards/: reach_v0.yaml
configs/robots/: arm_v0.yaml
configs/sweeps/: default.yaml
configs/tasks/: tabletop_reach.yaml
examples/results/v0.6.0/: README.md  matrix_summary.json  replay_gallery.html  replay_index.json  report.html  summary.csv
examples/results/v0.6.0/scenarios/action_noise/: scorecard.json
examples/results/v0.6.0/scenarios/baseline/: scorecard.json
examples/results/v0.6.0/scenarios/combined_hard/: scorecard.json
examples/results/v0.6.0/scenarios/high_friction/: scorecard.json
examples/results/v0.6.0/scenarios/low_friction/: scorecard.json
examples/results/v0.6.0/scenarios/observation_noise/: scorecard.json
examples/results/v0.6.0/scenarios/target_shift/: scorecard.json
kineforge/: config.py  eval_artifacts.py  evals.py  gallery.py  gates.py  matrix.py  randomization.py  registry.py  replay.py  reports.py  rewards.py  sweeps.py
kineforge/envs/: __init__.py  tabletop_reach_env.py
tests/: test_env_smoke.py
