[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kineforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "mujoco",
  "gymnasium",
  "stable-baselines3",
  "numpy",
  "pyyaml",
  "matplotlib",
  "pytest",
]

[tool.setuptools.packages.find]
include = ["kineforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
